crates/mdfx/src/renderer/svg/snapshots/mdfx__renderer__svg__tests__gauge_45_percent.snap
---
source: crates/mdfx/src/renderer/svg/mod.rs
expression: render_inline_svg(&primitive)
---
<svg xmlns="http://www.w3.org/2000/svg" width="80" height="48" viewBox="0 0 80 48">
<path d="M 4.0 40.0 A 36.0 36.0 0 0 1 76.0 40.0" fill="none" stroke="#E0E0E0" stroke-width="8" stroke-linecap="round"/>
<path d="M 4.0 40.0 A 36.0 36.0 0 0 1 76.0 40.0" fill="none" stroke="#FF9800" stroke-width="8" stroke-linecap="round" stroke-dasharray="50.89 62.20"/>
</svg>
