crates/mdfx/src/renderer/svg/snapshots/mdfx__renderer__svg__tests__rating_3_5_stars.snap
---
source: crates/mdfx/src/renderer/svg/mod.rs
expression: render_inline_svg(&primitive)
---
<svg xmlns="http://www.w3.org/2000/svg" width="108" height="20" viewBox="0 0 108 20">
  <defs>
    <clipPath id="clip-0"><rect x="0" y="0" width="20" height="20"/></clipPath>
    <clipPath id="clip-1"><rect x="22" y="0" width="20" height="20"/></clipPath>
    <clipPath id="clip-2"><rect x="44" y="0" width="20" height="20"/></clipPath>
    <clipPath id="clip-3"><rect x="66" y="0" width="20" height="20"/></clipPath>
    <clipPath id="clip-4"><rect x="88" y="0" width="20" height="20"/></clipPath>
    <clipPath id="partial-0"><rect x="0" y="0" width="20" height="20"/></clipPath>
    <clipPath id="partial-1"><rect x="22" y="0" width="20" height="20"/></clipPath>
    <clipPath id="partial-2"><rect x="44" y="0" width="20" height="20"/></clipPath>
    <clipPath id="partial-3"><rect x="66" y="0" width="10" height="20"/></clipPath>
  </defs>

  <path d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z" fill="#6B7280" transform="translate(0, 0) scale(0.8333333)"/>
  <g clip-path="url(#partial-0)"><path d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z" fill="#FFD700" transform="translate(0, 0) scale(0.8333333)"/></g>
  <path d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z" fill="#6B7280" transform="translate(22, 0) scale(0.8333333)"/>
  <g clip-path="url(#partial-1)"><path d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z" fill="#FFD700" transform="translate(22, 0) scale(0.8333333)"/></g>
  <path d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z" fill="#6B7280" transform="translate(44, 0) scale(0.8333333)"/>
  <g clip-path="url(#partial-2)"><path d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z" fill="#FFD700" transform="translate(44, 0) scale(0.8333333)"/></g>
  <path d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z" fill="#6B7280" transform="translate(66, 0) scale(0.8333333)"/>
  <g clip-path="url(#partial-3)"><path d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z" fill="#FFD700" transform="translate(66, 0) scale(0.8333333)"/></g>
  <path d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z" fill="#6B7280" transform="translate(88, 0) scale(0.8333333)"/></svg>
