crates/mdfx/src/renderer/svg/snapshots/mdfx__renderer__svg__tests__sparkline_line.snap
---
source: crates/mdfx/src/renderer/svg/mod.rs
expression: render_inline_svg(&primitive)
---
<svg xmlns="http://www.w3.org/2000/svg" width="100" height="20" viewBox="0 0 100 20">
  <polyline points="3.0,17.0 18.7,12.8 34.3,7.2 50.0,11.4 65.7,4.4 81.3,8.6 97.0,3.0" fill="none" stroke="#4CAF50" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
</svg>
