crates/mdfx/src/renderer/svg/snapshots/mdfx__renderer__svg__tests__swatch_pill.snap
---
source: crates/mdfx/src/renderer/svg/mod.rs
expression: render_inline_svg(&primitive)
---
<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20">
  <rect x="0" y="0" width="20" height="20" fill="#2B6CB0" rx="3" ry="3"/>
</svg>
