crates/mdfx/src/renderer/svg/snapshots/mdfx__renderer__svg__tests__swatch_with_label.snap
---
source: crates/mdfx/src/renderer/svg/mod.rs
expression: render_inline_svg(&primitive)
---
<svg xmlns="http://www.w3.org/2000/svg" width="80" height="20" viewBox="0 0 80 20">
  <rect x="0" y="0" width="80" height="20" fill="#FF5722" rx="3" ry="3"/>
  <text x="40" y="13" text-anchor="middle" fill="#FFFFFF" font-family="Verdana,DejaVu Sans,sans-serif" font-size="11" font-weight="600">Orange</text>
</svg>
